--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aniso8601==9.0.1
 blinker==1.8.2
 click==8.1.7
 colorama==0.4.6
+Faker==26.0.0
 Flask==3.0.3
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
@@ -18,6 +19,7 @@ Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
 promise==2.3
+python-dateutil==2.9.0.post0
 six==1.16.0
 SQLAlchemy==2.0.31
 typing_extensions==4.12.2
